<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Security Locker</string>
    <string name="menu_app_lock">App</string>
    <string name="menu_tool">Tool</string>
    <string name="menu_theme">Theme</string>
    <string name="menu_setting">Setting</string>
    <string name="msg_search_hint">Search</string>
    <string name="msg_ntf_secure">Protecting you</string>
    <string name="draw_patter">Draw a pattern to unlock</string>
    <string name="input_pin">Input passcode to unlock</string>
    <string name="msg_dayOneNotificationTitle01"><![CDATA[We miss you so much 💝]]></string>
    <string name="dayOneNotificationTitle01"><![CDATA[We miss you so much 💝]]></string>
    <string name="dayOneNotificationMessage01"><![CDATA[Change the lock screen wallpaper now]]></string>
    <string name="dayTwoNotificationTitle01"><![CDATA[One Tap Lock 💝]]></string>
    <string name="dayTwoNotificationMessage01"><![CDATA[Lock app messenger , viber , telegram, line and any app]]></string>
    <string name="dayFourNotificationTitle03"><![CDATA[One Tap Lock Gallery 💝]]></string>
    <string name="dayFourNotificationMessage03"><![CDATA[🎨 Hide sensitive photos and videos]]></string>
    <string name="daySevenNotificationTitle02"><![CDATA[Change password now 💝]]></string>
    <string name="daySevenNotificationMessage02"><![CDATA[🌪 Passwords may be exposed]]></string>
    <string name="weeklyNotificationTitle04"><![CDATA[How\'s your weekend?]]></string>
    <string name="weeklyNotificationMessage04"><![CDATA[💌 Track your phone usage for the past week!]]></string>
    <string name="NotificationTitle10m"><![CDATA[Lock now 🔐]]></string>
    <string name="NotificationMessage10m"><![CDATA[💌 Protect your privacy now]]></string>
    <string name="msg_action_ads"><![CDATA[This action may contain ads]]></string>
    <string name="by_app_name">by Security Locker</string>
    <string name="label_charge_health">Charge Health</string>
    <string name="label_charge_capacity">Capacity</string>
    <string name="label_charge_tempurature">Temperature</string>
    <string name="label_charge_type">Battery technology</string>
    <string name="miliampe" translatable="false" tools:ignore="ExtraTranslation">mAh</string>
    <string name="battery_health_good">GOOD</string>
    <string name="battery_health_dead">DEAD</string>
    <string name="battery_health_cold">COLD</string>
    <string name="battery_health_overheat">OVER HEAT</string>
    <string name="battery_health_unspecified_failure">UNSPECIFIED_FAILURE</string>
    <string name="battery_health_unkown">UNKNOW</string>
    <string name="msg_ok">Ok</string>
    <string name="internet_lose">Please connect to the internet to continue using this feature!</string>
    <string name="grant_permission_now">Allow permission</string>
    <string name="cancel">Cancel</string>
    <string name="you_must_allow_permission">You must grant data access permission to use this function.</string>
    <string name="desc_permission_access_data_usage">To be able to show the lock screen when apps are opened. We need permission to access data usage</string>
    <string name="guide_access_permission_v5">On the next screen, find Security Locker app, then tap to ENABLE or ALLOW.</string>
    <string name="grant_permission">Allow permission</string>
    <string name="last_24_hour">24 hour ago</string>
    <string name="last_10_day">Last 10 day</string>
    <string name="hour">hour</string>
    <string name="minutes">minute</string>
    <string name="time_on_screen">time on screen</string>
    <string name="unsinstall">Uninstall</string>
    <string name="update">Update</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="policy">Policy</string>
    <string name="version">Version </string>
    <string name="cannot_find_app">Cannot found my app</string>
    <string name="availble">available</string>
    <string name="subject_mail_fb">Feedback app</string>
    <string name="temp_message_fb">Content</string>
    <string name="choose_email">Choose an Email</string>
    <string name="desc_require_update_app">We have a new version, please update the app to continue using it. Thanks!
    </string>
    <string name="guide_update_app">When opening the store, select the update button to update the app</string>
    <string name="title_update_app">Update app</string>
    <string name="desc_permission_draw_overlay">
        So that the app can show the lock screen on other apps.
        \n\nThis helps protect your privacy.
    </string>
    <string name="msg_no">No</string>
    <string name="msg_suggest_power_connect">Turn off some background tasks to save battery</string>
    <string name="lock_app">Manage app lock</string>
    <string name="change_theme">Change background</string>
    <string name="scan_app_battery">Scan for battery-draining apps</string>
    <string name="optimizing">Optimizing</string>
    <string name="opimize_battery_success">Congratulations on your successful optimization of some battery-hungry tasks. The phone is in the best charging state</string>
    <string name="no_support_bluetooth">Device not support bluetooth</string>
    <string name="desc_permission_write_setting">So that the application can perform  optimization tasks. For some Android phones, you\'ll need to grant permission to modify settings, allowing this app to take actions to optimize.</string>
    <string name="title_explain_permission_optimize">Permission modify the system</string>
    <string name="boost_suggest_notify">Detects many apps running in the background that slow down your phone</string>
    <string name="optimize_now">Release now</string>
    <string name="optimized">Optimized</string>
    <string name="title_battery_full">Battery is full</string>
    <string name="content_battery_full">Please unplug the charger to ensure the best battery life</string>
    <string name="title_battery_low">Battery low</string>
    <string name="content_battery_low">Please charge the battery so that the phone can work at its best</string>
    <string name="title_battery_temp_high">Battery temperature too high</string>
    <string name="content_battery_temp_high">Turn off applications running in the background that consume CPU resources right away to make your phone cooler</string>
    <string name="boosted">Boosted </string>
    <string name="label_ram_free">Ram Available</string>
    <string name="optimized_now">Optimize now</string>
    <string name="msg_down_wall_successful">Congratulations on successfully downloading this wallpaper</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="set_wallpaper_lock">Lock screen</string>
    <string name="set_wallpaper_home">Home screen</string>
    <string name="set_wallpaper_lock_app">Lock app screen</string>
    <string name="msg_set_background_ok">Set wallpaper successfully</string>
    <string name="msg_set_background_fail">Wallpaper setting failed</string>
    <string name="download_image_fail">Download wallpaper failed</string>
    <string name="fail_setwallpaper_message">Fail to set wallpaper. Sorry and You try again.Thanks</string>
    <string name="congratulation_set_wallpaper_success">Congratulations, you have successfully set the wallpaper</string>
    <string name="fail_crop_image">Crop image fail</string>
    <string name="loading_ad">Ad loading ...</string>
    <string name="msg_confirm_watch_ads">You need to watch the short video to be able to download this wallpaper. Thank</string>
    <string name="set_up_pass">Set up parttern lock\n</string>
    <string name="change_pass">Change Password</string>
    <string name="change_pass_success">Password has been successfully set</string>
    <string name="must_allow_storage_permission">Please allow access to photos on your device to be able to select photos</string>
    <string name="msg_language">Language</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="pass_not_match">" The 2 passwords do not match. Please try again"</string>
</resources>