<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dimen_2x"
    android:background="@drawable/bg_white_radius"
    android:minWidth="@dimen/dimen_340"
    android:paddingBottom="@dimen/dimen_10">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lvView"
        android:layout_width="130dp"
        android:layout_height="130dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/gift">

    </com.airbnb.lottie.LottieAnimationView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lvView">

        <TextView
            android:id="@+id/titleTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="12dp"
            android:gravity="center_horizontal"
            android:text="@string/msg_down_wall_successful"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/bottomBackgroundView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/bottomBackgroundView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/dialogConfirmTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:gravity="center_horizontal"
                android:text="@string/set_wallpaper"
                android:textColor="#0a131d"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dialogConfirmLockApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="?android:attr/selectableItemBackground"
                android:drawableStart="@drawable/ic_phone_white"
                android:drawablePadding="17dp"
                android:paddingStart="10dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:tag="3"
                android:text="@string/set_wallpaper_lock_app"
                android:textColor="#0a131d"
                android:textSize="16sp"
                android:textStyle="normal"
                android:visibility="visible" />

            <TextView
                android:id="@+id/dialogConfirmHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:background="?android:attr/selectableItemBackground"
                android:drawableStart="@drawable/ic_home_white"
                android:drawablePadding="13dp"
                android:paddingStart="8dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:tag="1"
                android:text="@string/set_wallpaper_home"
                android:textAlignment="textStart"
                android:textColor="#0a131d"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/dialogConfirmLock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="?android:attr/selectableItemBackground"
                android:drawableStart="@drawable/ic_lock_white"
                android:drawablePadding="17dp"
                android:paddingStart="10dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:tag="2"
                android:text="@string/set_wallpaper_lock"
                android:textColor="#0a131d"
                android:textSize="16sp"
                android:textStyle="normal" />


        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

