<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/bg_white_radius"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    app:srcCompat="@mipmap/ic_app_foreground" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvAppName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/dimen_10"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/icon_turtle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/fast_charge"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.ls.entertainment.securitylocker.custom.CustomTextView
                android:id="@+id/btn_yes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_main"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/msg_ok"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn_no"
                app:layout_constraintEnd_toEndOf="@+id/vw_rocket"
                app:layout_constraintStart_toStartOf="@+id/vw_rocket" />

            <com.ls.entertainment.securitylocker.custom.CustomTextView
                android:id="@+id/btn_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_2x"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/msg_no"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16"
                app:layout_constraintEnd_toEndOf="@+id/vw_turtle"
                app:layout_constraintStart_toStartOf="@+id/vw_turtle"
                app:layout_constraintTop_toBottomOf="@+id/label_normal_charge" />
        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
